# named

./: named.cabal
Data/: Named.hs
Data/Named/: DAG.hs  Graph.hs
Text/Named/: TeiNCP.hs
examples/: readTei.hs
