Name:               named
Version:            0.0.1
Synopsis:           Named entities layer
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple
Exposed-modules:    Data.Named
                    Data.Named.DAG
                    Data.Named.Graph
                    Text.Named.TeiNCP
Build-Depends:      base
                  , containers
                  , text
                  , vector
                  , polysoup
                  , tar
                  , zlib
                  , bytestring
                  , filepath
